--- a/Views/Dashboard/NationalWisePriVsSecPartial.cshtml
+++ b/Views/Dashboard/NationalWisePriVsSecPartial.cshtml
@@ -7,8 +7,8 @@
 <table class="table table-bordered table-centered align-middle table-nowrap mb-0" id="national-pri-vs-sec-tbl">
     <thead class="text-muted table-light">
         <tr>
-            <th scope="col" rowspan="2" valign="middle">Group</th>
-            <th scope="col" rowspan="2" valign="middle">Category Name</th>
+            @*<th scope="col" rowspan="2" valign="middle">Group</th>*@
+            <th scope="col" rowspan="2" valign="middle" style="text-align: center;">Category Name</th>
             @*<th scope="col" colspan="3" style="text-align: center;">@ViewBag.dataTable.Rows[0]["ORDER_DATE"]</th>*@
             <th scope="col" colspan="3" style="text-align: center;">Secondary Till 20 July'25' (In Crore)</th>
             <th scope="col" colspan="3" style="text-align: center;">Primary Till 20 July'25' (In Crore)</th>
@@ -26,9 +26,9 @@
         @foreach (System.Data.DataRow rows in ViewBag.dataTable.Rows)
         {
             <tr>
-                <td style="text-align: center;">
+                @*<td style="text-align: center;">
                     <span class="text-primary">National</span>
-                </td>
+                </td>*@
                 <td style="text-align: center;">
                     <span class="text-primary">@rows["CATEGORY_NAME"]</span>
                 </td>
