--- a/Views/Dashboard/NationalWiseSkuKpiPartial.cshtml
+++ b/Views/Dashboard/NationalWiseSkuKpiPartial.cshtml
@@ -77,12 +77,16 @@
             </td>
 
         </tr><!-- end tr -->
+
         @foreach (System.Data.DataRow rows in ViewBag.dataTable3.Rows)
         {
             <tr>
                 <td style="text-align: center;">
-                    <a href="#"> <span class="text-primary focus-category" id="@rows["FOCUS_CATEGORY_ID"]">
-                        @rows["FOCUS_CATEGORY_NAME"]</span></a>
+                    <a href="~/Dashboard/RegionWiseSkuKpi?dt=@rows["P_AS_ON_DATE"]&region_id=&area_id=&focus_category_id=@rows["FOCUS_CATEGORY_ID"]" target="_blank">
+                        <span class="text-primary focus-category" id="@rows["FOCUS_CATEGORY_ID"]">
+                            @rows["FOCUS_CATEGORY_NAME"]
+                        </span>
+                    </a>
                 </td>
 
                 <td style="text-align: center;">
@@ -117,7 +121,9 @@
         {
             <tr>
                 <td style="text-align: center;">
-                    <span class="text-primary">@rows["FOCUS_CATEGORY_NAME"]</span>
+                    <a href="~/Dashboard/RegionWiseSkuKpi?dt=@rows["P_AS_ON_DATE"]&region_id=&area_id=&focus_category_id=@rows["FOCUS_CATEGORY_ID"]" target="_blank">
+                        <span class="text-primary">@rows["FOCUS_CATEGORY_NAME"]</span>
+                    </a>
                 </td>
 
                 <td style="text-align: center;">
