add sales report

--- a/Views/Dashboard/DashboardHeaderPartial.cshtml
+++ b/Views/Dashboard/DashboardHeaderPartial.cshtml
@@ -35,7 +35,7 @@
                     <h4 class="fs-20 fw-semibold ff-secondary mb-4">
                         ৳<span class="counter-value" data-target="0">@ViewBag.dataTable.Rows[0]["MTD_SALES_AMT"]</span>
                     </h4>
-                    <a href="#" class="text-decoration-underline">
+                    <a href="~/SalesReport/SalesReport" class="text-decoration-underline" target="_blank">
                         View sales report
                     </a>
                 </div>
@@ -71,7 +71,7 @@
                     <h4 class="fs-20 fw-semibold ff-secondary mb-4">
                         <span class="counter-value" data-target="5432">@ViewBag.dataTable.Rows[0]["TOTAL_ACTIVE_OUTLET"]</span>
                     </h4>
-                    <a href="#" class="text-decoration-underline">View outlets</a>
+                    <a href="~/Dashboard/OutletInMap" class="text-decoration-underline">View outlets</a>
                 </div>
                 <div class="avatar-sm flex-shrink-0">
                     <span class="avatar-title bg-primary-subtle rounded fs-3">
