--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -496,7 +496,7 @@
                                  src="Content/assets/images/users/user-dummy-img.jpg" alt="Header Avatar">
                             <span class="text-start ms-xl-2">
                                 <span class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">
-                                    Hira Sharker
+                                    @Convert.ToString(Session["user_name"])
                                 </span>
                                 <span class="d-none d-xl-block ms-1 fs-12 user-name-sub-text">Admin</span>
                             </span>
