--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -79,9 +79,9 @@
                                         </div>
 
                                         <div class="mb-3">
-                                            <div class="float-end">
+                                            @*<div class="float-end">
                                                 <a href="auth-pass-reset-basic.html" class="text-muted">Forgot password?</a>
-                                            </div>
+                                            </div>*@
                                             <label class="form-label" for="password-input">Password</label>
                                             <div class="position-relative auth-pass-inputgroup mb-3">
                                                 <input type="password" class="form-control pe-5 password-input" placeholder="Enter password" id="password-input" name="password">
