--- a/Views/Dashboard/ProductSalesComparisonPartial.cshtml
+++ b/Views/Dashboard/ProductSalesComparisonPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    var dt = ViewBag.ProductSalesM2MComparison as System.Data.DataTable;
+    System.Data.DataTable dt = ViewBag.ProductSalesM2MComparison;
 }
 
 @if (dt != null && dt.Rows.Count > 0)
