--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -493,7 +493,7 @@
                             aria-haspopup="true" aria-expanded="false">
                         <span class="d-flex align-items-center">
                             <img class="rounded-circle header-profile-user"
-                                 src="Content/assets/images/users/user-dummy-img.jpg" alt="Header Avatar">
+                                 src="~/Content/assets/images/users/user-dummy-img.jpg" alt="Header Avatar">
                             <span class="text-start ms-xl-2">
                                 <span class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">
                                     @Convert.ToString(Session["user_name"])
@@ -504,13 +504,13 @@
                     </button>
                     <div class="dropdown-menu dropdown-menu-end">
                         <!-- item-->
-                        <h6 class="dropdown-header">Welcome Hira!</h6>
-                        <a class="dropdown-item" href="pages-profile.html">
+                        <h6 class="dropdown-header">Welcome @Convert.ToString(Session["user_name"])!</h6>
+                        @*<a class="dropdown-item" href="pages-profile.html">
                             <i class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Profile</span>
                         </a>
                         <a class="dropdown-item" href="pages-profile-settings.html">
                             <span class="badge bg-success-subtle text-success mt-1 float-end">New</span><i class="mdi mdi-cog-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Settings</span>
-                        </a>
+                        </a>*@
                         
                         <a class="dropdown-item" href="~/User/Logout">
                             <i class="mdi mdi-logout text-muted fs-16 align-middle me-1"></i> <span class="align-middle" data-key="t-logout">Logout</span>
