--- a/Views/Shared/_Sidebar.cshtml
+++ b/Views/Shared/_Sidebar.cshtml
@@ -62,20 +62,22 @@
                         <ul class="nav nav-sm flex-column">
                             <li class="nav-item">
                                 <a href="#salesReport" class="nav-link" data-bs-toggle="collapse"
-                                   role="button" aria-expanded="false" aria-controls="salesReport"
+                                   role="button" aria-expanded="true" aria-controls="salesReport"
                                    data-key="t-calender">
                                     Sales
                                 </a>
-                                <div class="collapse menu-dropdown" id="salesReport">
+                                <div class="collapse menu-dropdown show" id="salesReport">
                                     <ul class="nav nav-sm flex-column">
                                         <li class="nav-item">
-                                            <a href="#" class="nav-link"
-                                               data-key="t-main-calender"> National SKU KPI </a>
+                                            <a href="~/SalesReport/SalesReport" class="nav-link"
+                                               data-key="t-main-calender"> Sales Report </a>
                                         </li>
+
                                         <li class="nav-item">
-                                            <a href="#" class="nav-link"
-                                               data-key="t-month-grid"> Own DB SKU KPI </a>
+                                            <a href="~/SalesReport/SalesReportMOM" class="nav-link"
+                                               data-key="t-main-calender"> MOM Comparision </a>
                                         </li>
+
                                     </ul>
                                 </div>
                             </li>
