--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -31,7 +31,7 @@
 
 <body>
 
-    <div class="auth-page-wrapper pt-5">
+    <div class="auth-page-wrapper">
         <!-- auth page bg -->
         <div class="auth-one-bg-position auth-one-bg" id="auth-particles">
             <div class="bg-overlay"></div>
@@ -48,9 +48,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="text-center mt-sm-5 mb-4 text-white-50">
+                        <div class="text-center mt-sm-3 mb-4 text-white-50">
                             <div>
-                                <a href="index.html" class="d-inline-block auth-logo">
+                                <a href="#" class="d-inline-block auth-logo">
                                     <img src="~/Content/assets/images/logo-dark.png" alt="" height="75">
                                 </a>
                             </div>
@@ -89,10 +89,10 @@
                                             </div>
                                         </div>
 
-                                        <div class="form-check">
+                                        @*<div class="form-check">
                                             <input class="form-check-input" type="checkbox" value="" id="auth-remember-check">
                                             <label class="form-check-label" for="auth-remember-check">Remember me</label>
-                                        </div>
+                                        </div>*@
 
                                         <div class="mt-4">
                                             <button class="btn btn-secondary w-100" type="submit">Sign In</button>
@@ -117,7 +117,7 @@
                         <!-- end card -->
 
                         <div class="mt-4 text-center">
-                            <p class="mb-0">Don't have an account ? <a href="auth-signup-basic.html" class="fw-semibold text-primary text-decoration-underline"> Signup </a> </p>
+                            @*<p class="mb-0">Don't have an account ? <a href="auth-signup-basic.html" class="fw-semibold text-primary text-decoration-underline"> Signup </a> </p>*@
                         </div>
 
                     </div>
