--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -156,7 +156,7 @@
             $('#global-spinner').addClass('d-none');
         }*/
 
-        function showCardSpinner(containerSelector) {
+        /*function showCardSpinner(containerSelector) {
             const $container = $(containerSelector);
             const $spinner = $('#global-spinner');
             const $backdrop = $('#global-spinner-backdrop');
@@ -176,7 +176,7 @@
 
         function hideCardSpinner() {
             $('#global-spinner, #global-spinner-backdrop').addClass('d-none');
-        }
+        }*/
 
 
     </script>
